tests/pact/bad/bad-ns-def.repl
(env-data { "k" : ["k"] })
(env-keys ["k"])
(define-namespace "1-namespace" (read-keyset "k") (read-keyset "k"))
(namespace "1-namespace")
